--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="body-c d-flex text-center text-white">
-      <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <div class="container-md d-flex w-100 h-100 p-3 mx-auto flex-column">
         <%- include('../partials/navbar')%> <%- include('../partials/flash')%>
         <%- body%> <%- include('../partials/footer')%>
       </div>
