--- a/views/stones/new.ejs
+++ b/views/stones/new.ejs
@@ -1,38 +1,102 @@
-<% layout('/layouts/boilerplate')%>
-<div class="row">
-    <h1 class="text-center">New Campground</h1>
-    <div class="col-md-6 offset-md-3">
-        <form action="/campgrounds" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
-            <div class='mb-3' >
-                <label class="form-label"  for="title">Title</label>
-                <input class="form-control" type="text" id="title" name="campground[title]" required>
-                <div class="valid-feedback">Looks Good</div>
-            </div>
-            <div class='mb-3'>
-                <label class="form-label" for="location">location</label>
-                <input class="form-control" type="text" id="location" name="campground[location]" required>
-                <div class="valid-feedback">Looks Good</div>
+<% layout('layouts/boilerplate')%>
+
+<div
+  class="container d-flex justify-content-center align-items-center mt-3 mb-3"
+>
+  <div class="row">
+    <div class="col-md-6 offset-md-3 col-xl-8 offset-xl-2">
+      <div class="bg-secondary card shadow">
+        <div class="bg-dark card-body">
+          <h1 class="text-center">New Stone</h1>
+          <form
+            action="/stones"
+            method="POST"
+            novalidate
+            class="needs-validation"
+            enctype="multipart/form-data"
+          >
+            <div class="mb-3">
+              <label class="form-label" for="name">Stone Name</label>
+              <input
+                class="form-control"
+                type="text"
+                id="name"
+                name="name"
+                required
+              />
+              <div class="valid-feedback">Looks Good</div>
             </div>
             <div class="mb-3">
-                <label for="images" class="form-label custom-file-label">Upload Images</label>
-                <input class="form-control custom-file" type="file" id="images" name="image" multiple required>
-                <div class="valid-feedback">Looks Good</div>
-              </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description</label>
-                <textarea class="form-control" id="description" rows="3" name="campground[description]" required></textarea>
-                <div class="valid-feedback">Looks Good</div>
-              </div>
-              <div class="mb-3">
-                  <label for="price">Campground Price</label>
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="price-label">₹(INR)</span>
-                    <input required type="text" id="name" name="campground[price]" class="form-control" placeholder="0" value="0" aria-label="price" aria-describedby="price-label">
-                </div>                  
-              </div>
-            <div class="mb-3">
-                <button class="btn btn-success">Add Campground</button>
+              <label class="form-label" for="title">Title</label>
+              <input
+                class="form-control"
+                type="text"
+                id="title"
+                name="title"
+                required
+              />
+              <div class="valid-feedback">Looks Good</div>
             </div>
-        </form>
+            <div class="mb-3">
+              <label for="description" class="form-label">body</label>
+              <textarea
+                class="form-control"
+                id="description"
+                rows="3"
+                name="body"
+                required
+              ></textarea>
+              <div class="valid-feedback">Looks Good</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="imageURL">imageURL</label>
+              <input
+                class="form-control"
+                type="text"
+                id="imageURL"
+                name="imageURL"
+                required
+              />
+              <div class="valid-feedback">Looks Good</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="filelink">filelink</label>
+              <input
+                class="form-control"
+                type="text"
+                id="filelink"
+                name="filelink"
+              />
+              <div class="valid-feedback">Looks Good</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="hint">hint</label>
+              <input
+                class="form-control"
+                type="text"
+                id="hint"
+                name="hint"
+                required
+              />
+              <div class="valid-feedback">Looks Good</div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label" for="solution">solution</label>
+              <input
+                class="form-control"
+                type="text"
+                id="solution"
+                name="solution"
+                required
+              />
+              <div class="valid-feedback">Looks Good</div>
+            </div>
+            <div class="mb-3">
+              <button class="btn btn-success">Add Stone</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
