--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
             <div class="mb-3">
               <label class="form-label" for="username">Username</label>
               <input
-                class="form-control bg-secondary"
+                class="form-control bg-secondary text-white"
                 type="text"
                 id="username"
                 name="username"
@@ -25,7 +25,7 @@
             <div class="mb-3">
               <label class="form-label" for="password">Password</label>
               <input
-                class="form-control bg-secondary"
+                class="form-control bg-secondary text-white"
                 type="password"
                 id="password"
                 name="password"
