--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,13 +20,21 @@
   </head>
   <body>
     <div class="body-c d-flex text-center text-white">
-      <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <div class="container-md d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
           <div>
             <h3 class="float-md-left mb-0">IEEE-NITK</h3>
             <nav class="nav nav-masthead justify-content-center float-md-right">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="#"
+                ><%= currentUser.username %></a
+              >
+              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <% if(currentUser) { %>
               <a class="nav-link" href="/stones">Stones</a>
+              <% } %> <%if (currentUser && currentUser.username==="admin") { %>
+              <a class="nav-link" href="/stones/new">new Stone</a>
+              <% } %>
+              <a class="nav-link" href="/stones/leaderboard">leaderboard</a>
               <% if(!currentUser) { %>
               <a class="nav-link" href="/login">Login</a>
               <% } else { %>
@@ -36,11 +44,12 @@
           </div>
         </header>
         <main class="px-3 mt-auto">
-          <img src="/images/logo.png" width="75%" alt="" />
-          <p class="lead">
+          <img src="/images/logo.png" width="100%" alt="" />
+          <p class="lead" style="font-size: 1.2rem">
             Welcome to the final stage of EUREKA! <br />
             We wish you the best for this round. :)
           </p>
+          <h3>10th January 2022 6:00 P.M. - 12:00 A.M.</h3>
         </main>
 
         <footer class="mt-auto text-white-50">
