fixing css errors & removing unwanted files

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -48,7 +48,7 @@ canvas {
   vertical-align: bottom;
 } /* ---- particles.js container ---- */
 #particles-js {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
