--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
               <a class="nav-link" aria-current="page" href="#"
                 ><%= currentUser.username %></a
               >
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
               <% if(currentUser) { %>
               <a class="nav-link" href="/stones">Stones</a>
               <% } %> <%if (currentUser && currentUser.username==="admin") { %>
