--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -39,7 +39,7 @@
       integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
       crossorigin="anonymous"
     ></script>
-
     <script src="/javascripts/particlejs.js"></script>
+    <script src="/javascripts/datehandler.js"></script>
   </body>
 </html>
