--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,18 +2,37 @@
   <div class="allnav">
     <h3 class="float-md-left mb-0">IEEE-NITK</h3>
     <nav class="nav nav-masthead justify-content-center float-md-right">
+      <a class="nav-link" aria-current="page" href="#" id="cdtimer"
+        >00:00:00:00</a
+      >
       <a class="nav-link" aria-current="page" href="#"
         ><%= currentUser.username %></a
       >
       <a class="nav-link" aria-current="page" href="/">Home</a>
       <% if(currentUser) { %>
-      <a class="nav-link" href="/stones">Stones</a>
+      <a
+        class="nav-link <%= (current_url=='/stones') ? 'active': '' %>"
+        href="/stones"
+        >Stones</a
+      >
       <% } %> <%if (currentUser && currentUser.username==="admin") { %>
-      <a class="nav-link" href="/stones/new">new Stone</a>
+      <a
+        class="nav-link <%= (current_url=='/stones/new') ? 'active': '' %>"
+        href="/stones/new"
+        >new Stone</a
+      >
       <% } %>
-      <a class="nav-link" href="/stones/leaderboard">leaderboard</a>
+      <a
+        class="nav-link <%= (current_url=='/stones/leaderboard') ? 'active': '' %>"
+        href="/stones/leaderboard"
+        >leaderboard</a
+      >
       <% if(!currentUser) { %>
-      <a class="nav-link" href="/login">Login</a>
+      <a
+        class="nav-link <%= (current_url=='/login') ? 'active': '' %>"
+        href="/login"
+        >Login</a
+      >
       <% } else { %>
       <a class="nav-link" href="/logout">Logout</a>
       <% } %>
