--- a/views/stones/index.ejs
+++ b/views/stones/index.ejs
@@ -82,7 +82,7 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                  <button class="btn btn-primary">
+                  <button class="btn btn-primary <%= (time_remaining) ? '':'disabled' %>">
                     Submit
                   </button>
                   <button
@@ -100,8 +100,8 @@
         </div>
       </div>
       <%} %>
-      <!-- ohoo -->
     </div>
+  <div class="card-header w-100">Your Score: <%= currentUser.score %> </div>
   </div>
 </div>
 
