allowing admin to collect stones anytime
use-imgur-for-images

more validations

Update schemas.js

Update schemas.js

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -55,7 +55,7 @@ canvas {
   right: 0;
   z-index: -1;
   background-color: #2c2e43;
-  background-image: url('/images/bg.png');
+  background-image: url('https://i.imgur.com/lcdGo6h.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
