--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,7 +44,7 @@
           </div>
         </header>
         <main class="px-3 mt-auto">
-          <img src="/images/logo.png" width="100%" alt="" />
+          <img src="https://i.imgur.com/tQSb7K4.png" width="100%" alt="" />
           <p class="lead" style="font-size: 1.2rem">
             Welcome to the final stage of EUREKA! <br />
             We wish you the best for this round. :)
