--- a/views/stones/new.ejs
+++ b/views/stones/new.ejs
@@ -62,7 +62,7 @@
               <label class="form-label" for="imageURL">imageURL</label>
               <input
                 class="form-control"
-                type="text"
+                type="url"
                 id="imageURL"
                 name="stone[imageURL]"
                 required
@@ -73,7 +73,7 @@
               <label class="form-label" for="filelink">filelink</label>
               <input
                 class="form-control"
-                type="text"
+                type="url"
                 id="filelink"
                 name="stone[filelink]"
               />
