adiition-pulse-embedathon
Update more.ejs

Update more.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,6 +29,7 @@
                 ><%= currentUser.username %></a
               >
               <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a class="nav-link text-primary" href="/more">More</a>
               <% if(currentUser) { %>
               <a class="nav-link" href="/stones">Stones</a>
               <% } %> <%if (currentUser && currentUser.username==="admin") { %>
@@ -46,8 +47,8 @@
         <main class="px-3 mt-auto">
           <img src="https://i.imgur.com/tQSb7K4.png" width="100%" alt="" />
           <p class="lead" style="font-size: 1.2rem">
-            Welcome to the final stage of EUREKA! <br />
-            We wish you the best for this round. :)
+            Elecktron <br />
+            Welcome to the End game of EUREKA!
           </p>
           <h3>10th January 2022 6:00 P.M. - 12:00 A.M.</h3>
         </main>
