--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
 <footer class="allnav mt-auto text-white-50">
-  <p>&copy; 2022. IEEE-NITK DIODE</p>
+  <p>
+    <a
+      href="https://ieee.nitk.ac.in/diode.html"
+      style="text-decoration: none; color: inherit"
+      >&copy; 2022. IEEE-NITK DIODE</a
+    >
+  </p>
 </footer>
