--- a/views/stones/index.ejs
+++ b/views/stones/index.ejs
@@ -1,7 +1,7 @@
 <% layout('/layouts/boilerplate')%>
 
 <div class="card text-white bg-dark" style="">
-  <div class="card-header">Stones</div>
+  <div class="card-header">Elecktron</div>
   <div class="card-deck">
     <br />
     <h5 class="card-title">Collect All the stones to win!</h5>
