--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,6 +9,11 @@
         ><%= currentUser.username %></a
       >
       <a class="nav-link" aria-current="page" href="/">Home</a>
+      <a
+        class="nav-link text-primary <%= (current_url=='/more') ? 'active': '' %>"
+        href="/more"
+        >More</a
+      >
       <% if(currentUser) { %>
       <a
         class="nav-link <%= (current_url=='/stones') ? 'active': '' %>"
