--- a/views/stones/index.ejs
+++ b/views/stones/index.ejs
@@ -8,7 +8,7 @@
     <br />
     <div class="container d-flex flex-wrap justify-content-around" style="">
       <% for (let i in stones) {%>
-      <div class="card text-white <%= colorc[i%6] %> mb-3" style="width: 18rem">
+      <div class="card text-white <%= colorc[i%6] %> mb-3 mx-md-3" style="width: 18rem">
         <div class="card-header">
           <a
             href="#"
