--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,6 +38,7 @@
               <a class="nav-link" href="/stones/leaderboard">leaderboard</a>
               <% if(!currentUser) { %>
               <a class="nav-link" href="/login">Login</a>
+              <a class="nav-link" href="/register">Register</a>
               <% } else { %>
               <a class="nav-link" href="/logout">Logout</a>
               <% } %>
